kyverno/podsecurity/resources/kyverno_kubernetes_008.yaml
# policy id: kyverno-kubernetes-008
# reason: enforce organization security control for kubernetes, using Kyverno, Containers must define CPU and memory limits
# severity: medium

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-kubernetes-008-require-resource-limits
  annotations:
    policies.kyverno.io/title: Containers must define CPU and memory limits
    policies.kyverno.io/category: podsecurity
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: Containers must define CPU and memory limits.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-resource-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: Containers must define CPU and memory limits.
        pattern:
          spec.containers[*].resources.limits.cpu: '*'
